src/objects/Extentia_SIM__MP_MapFilter__c.object
<CustomObject>
    <fields>
        <fullName>Extentia_SIM__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Extentia_SIM__Expression1__c</fullName>
        <label>Expression1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Extentia_SIM__Expression__c</fullName>
        <label>Expression</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Extentia_SIM__Filter_Criteria__c</fullName>
        <label>Filter Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Extentia_SIM__MP_CustomMapping__c</fullName>
        <label>MP_CustomMapping</label>
        <referenceTo>Extentia_SIM__MP_CustomMapping__c</referenceTo>
        <relationshipLabel>MP_MapFilters</relationshipLabel>
        <relationshipName>MapFilters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Extentia_SIM__Type__c</fullName>
        <label>Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extentia_SIM__isCustomExpression__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCustomExpression</label>
        <type>Checkbox</type>
    </fields>
    <label>MP_MapFilter</label>
    <nameField>
        <label>MP_MapFilter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MP_MapFilters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Extentia_SIM__Duplicate_check_rule</fullName>
        <active>false</active>
        <description>Duplicate_check_rule</description>
        <errorConditionFormula>IF(ISNEW(), IF(VLOOKUP($ObjectType.Extentia_SIM__MP_MapFilter__c.Fields.Name , $ObjectType.Extentia_SIM__MP_MapFilter__c.Fields.Name , 
Name) != &apos;&apos;, true, false), false)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Filter Name Already exists.</errorMessage>
    </validationRules>
</CustomObject>